# handbook-api

./: README.md  alembic.ini  dev.env  pyproject.toml
alembic/: env.py
alembic/versions/: 2d9021f6cc11_initial_commit.py  9e58c686be5d_changed_relationship_between_building_.py
src/core/: config.py
src/database/: database.py
src/dependencies/: session.py
src/models/: __init__.py  activity.py  building.py  organization.py  organization_activities.py  phone.py
